--- a/ai-backend/package.json
+++ b/ai-backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "cors": "^2.8.5"
   }
 }
